--- a/index.html
+++ b/index.html
@@ -1,7 +1,129 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <body>
+        <div id="main">
+            <div id="page-head">
+                <div id="photo"><img src="./index_files/yufan.jfif" align="right"></div>
+                <h1>Yufan Zhou</h1>
+                <h3>Ph.D. student</h3>
+                <div id="contact">
+                    Department of Computer Science and Engineering<br>
+                    University at Buffalo<br>
+                    Davis Hall, Amherst, NY, 14228<br>
+                </div>
+            </div>
+
+            <hr>
+            <div class="section-heading"><h2>Bio</h2></div>
+                <p> I am a second year Ph.D. student co-advised by
+                    <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
+                    <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
+                    <br>
+                    Prior to joining UB, I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
+                    <br>
+                    Currently my research is about in Kernel Methods, Statistical Manifolds and their applications (e.g. Deep Generaative Models, Graph Neural Networks). Here is my <a href="./cv.pdf">CV</a>.
+                </p>
+
+            <hr>
+            <div class="section-heading"><h2>News</h2></div>
+                <ul>
+                    <li>
+                        <div class="news"><strong>[Jan.2020]</strong> One paper got accepted by IEEE International Symposium on Biomedical Imaging (<b> ISBI </b>), 2020.</div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="news"><strong>[Nov.2020]</strong> Two papers got accepted by AAAI conference on Artificial Interlligence (<b> AAAI </b>), 2020.</div>
+                    </li>
+                </ul>
+
+
+            <hr>
+            <div class="section-heading"><h2>Publications</h2></div>
+                <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Weakly-supervised Brain Tumor Classification with Global Diagnosis Label </div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Changyou Chen, Mingchen Gao, Hong Zhu, Jinhui Xu.</div>
+                            <div class="venue"> <i> IEEE International Symposium on Biomedical Imaging </i> (<b> ISBI </b>), 2020.</div>
+<!--                        <div class="links">[<a href="./materials/KWNG.pdf">paper</a>]</div>-->
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Variational Adversarial Kernel Learned Imitation Learning </div>
+                            <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
+                            <div class="venue"> <i> AAAI conference on Artificial Interlligence </i> (<b> AAAI </b>), 2020.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions </div>
+                            <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
+                            <div class="venue"> <i> AAAI conference on Artificial Interlligence </i>  (<b> AAAI </b>), 2020.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Holistic Brain Tumor Screening and Classification Based on DenseNet and Recurrent Neural Network </div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Hong Zhu, Changyou Chen, Mingchen Gao, Kai Xu, Jinhui Xu.</div>
+                            <div class="venue"> <i> International MICCAI Brainlesion Workshop </i> (<b> BrainLes </b>), 2018.</div>
+                        </div>
+                    </li>
+
+
+                </ul>
+
+            <hr>
+            <div class="section-heading"><h2>Manuscripts</h2></div>
+                <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
+                            <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv link</a>]</div>
+                        </div>
+                    </li>
+
+
+                </ul>
+                </div>
+
+            <hr>
+            <div class="section-heading"><h2>Notes</h2></div>
+                <p> Jan.2020: <i> I will start writing down something on different topics (but all machine learning related) here.</i></p>
+                <ul>
+                    <li>
+                        <div class="note_class">Information Geometry
+                            <ul>
+                                <li>
+                                    <div id="notes"> <b>[updated Jan.11.2020]</b> Elementary Differential Geometry [<a href="./notes/information_geometry/elemetary.pdf" target="_blank">pdf link</a>]</div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="note_class">Non-equilibrium Statistical Physics
+<!--                            <ul>-->
+<!--                                <li>-->
+<!--                                </li>-->
+<!--                            </ul>-->
+                        </div>
+                    </li>
+                    <br>
+
+
+
+                </ul>
+
+        </div>
+    </body>
 </html>
