--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
         <div id="main">
             <div id="page-head">
-                <div id="photo"><img src="./index_files/yufan.jfif" align="right"></div>
+                <div id="photo"><img src="drboog.github.io/index_files/yufan.jfif" align="right"></div>
                 <h1>Yufan Zhou</h1>
                 <h3>Ph.D. student</h3>
                 <div id="contact">
@@ -21,7 +21,7 @@
                     <br>
                     Prior to joining UB, I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
-                    Currently my research focuses on Kernel Methods, Statistical Manifolds and their applications (e.g. Deep Generaative Models, Graph Neural Networks). Here is my <a href="./cv.pdf">CV</a>.
+                    Currently my research focuses on Kernel Methods, Statistical Manifolds and their applications (e.g. Deep Generaative Models, Graph Neural Networks). Here is my <a href="drboog.github.io/cv.pdf">CV</a>.
                 </p>
 
             <hr>
@@ -103,7 +103,7 @@
                         <div class="note_class">Information Geometry
                             <ul>
                                 <li>
-                                    <div id="notes"> <b>[updated Jan.11.2020]</b> Elementary Differential Geometry [<a href="./notes/information_geometry/elementary.pdf" target="_blank">pdf link</a>]</div>
+                                    <div id="notes"> <b>[updated Jan.11.2020]</b> Elementary Differential Geometry [<a href="drboog.github.io/notes/information_geometry/elementary.pdf" target="_blank">pdf link</a>]</div>
                                 </li>
                             </ul>
                         </div>
