--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <style>
+        body{
+            padding-top: 5%;
+            padding-left: 20%;
+            padding-right: 20%;
+            padding-bottom: 5%;
+        }
+    </style>
+    </head>
+
     <body>
-        <div id="main">
+        <div id="main" padding="10%">
             <div id="page-head">
                 <div id="photo"><img src="./index_files/yufan.jfif" align="right"></div>
                 <h1>Yufan Zhou</h1>
