--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <br>
                     Prior to joining UB, I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
-                    Currently my research focuses on Kernel Methods, Statistical Manifolds and their applications (e.g. Deep Generaative Models, Graph Neural Networks). Here is my <a href="./CV.pdf">CV</a>.
+                    Currently my research focuses on Kernel Methods, Statistical Manifolds and their applications (e.g. Deep Generative Models, Graph Neural Networks). Here is my <a href="./CV.pdf">CV</a>.
                 </p>
 
             <hr>
