--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <br>
 
                     <li>
-                        <div class="news"><strong>[Nov.2019]</strong> Two papers got accepted by AAAI conference on Artificial Interlligence (<b>AAAI</b>), 2020.</div>
+                        <div class="news"><strong>[Nov.2019]</strong> Two papers got accepted by AAAI conference on Artificial Intelligence (<b>AAAI</b>), 2020.</div>
                     </li>
                 </ul>
 
@@ -66,7 +66,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Variational Adversarial Kernel Learned Imitation Learning </div>
                             <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
-                            <div class="venue"> <i> AAAI conference on Artificial Interlligence </i> (<b>AAAI</b>), 2020.</div>
+                            <div class="venue"> <i> AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
@@ -75,7 +75,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions </div>
                             <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
-                            <div class="venue"> <i> AAAI conference on Artificial Interlligence </i>  (<b>AAAI</b>), 2020.</div>
+                            <div class="venue"> <i> AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
                         </div>
                     </li>
                     <br>
