--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <hr>
             <div class="section-heading"><h2>Notes</h2></div>
-                <p> Jan.2020: <i> I will start writing down something on different topics (but all machine learning related) here.</i></p>
+                <p> Jan.2020: <i> I will start writing down some notes on different topics (but all machine learning related) here.</i></p>
                 <ul>
                     <li>
                         <div class="note_class">Information Geometry
