--- a/index.html
+++ b/index.html
@@ -107,33 +107,33 @@
                 </div>
 
             <hr>
-            <div class="section-heading"><h2>Notes</h2></div>
-                <p> Jan.2020: <i> I will start writing down some notes on different topics (but all machine learning related) here.</i></p>
-                <ul>
-                    <li>
-                        <div class="note_class">Information Geometry
-                            <ul>
-                                <li>
-                                    <div id="notes"> <b>[updated Jan.11.2020]</b> Elementary Differential Geometry [<a href="./notes/information_geometry/elementary.pdf" target="_blank">pdf link</a>]</div>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <br>
-
-                    <li>
-                        <div class="note_class">Non-equilibrium Statistical Physics
+<!--            <div class="section-heading"><h2>Notes</h2></div>-->
+<!--                <p> Jan.2020: <i> I will start writing down some notes on different topics (but all machine learning related) here.</i></p>-->
+<!--                <ul>-->
+<!--                    <li>-->
+<!--                        <div class="note_class">Information Geometry-->
 <!--                            <ul>-->
 <!--                                <li>-->
+<!--                                    <div id="notes"> <b>[updated Jan.11.2020]</b> Elementary Differential Geometry [<a href="./notes/information_geometry/elementary.pdf" target="_blank">pdf link</a>]</div>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-                        </div>
-                    </li>
-                    <br>
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <br>-->
+
+<!--                    <li>-->
+<!--                        <div class="note_class">Non-equilibrium Statistical Physics-->
+<!--&lt;!&ndash;                            <ul>&ndash;&gt;-->
+<!--&lt;!&ndash;                                <li>&ndash;&gt;-->
+<!--&lt;!&ndash;                                </li>&ndash;&gt;-->
+<!--&lt;!&ndash;                            </ul>&ndash;&gt;-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <br>-->
 
 
 
-                </ul>
+<!--                </ul>-->
 
         </div>
     </body>
