--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <ul>
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Weakly-supervised Brain Tumor Classification with Global Diagnosis Label </div>
+                            <div class="title"><text id="small-caps"> Weakly-supervised Brain Tumor Classification with Global Diagnosis Label <font color="#FF0000">(Oral)</font> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Chunwei Ma, Mingchen Gao, Changyou Chen, Hong Zhu, Jinhui Xu.</div>
                             <div class="venue"> <i> IEEE International Symposium on Biomedical Imaging </i> (<b>ISBI</b>), 2020.</div>
 <!--                        <div class="links">[<a href="./materials/KWNG.pdf">paper</a>]</div>-->
