--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                            <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv link</a>]</div>
+                            <div class="links">[<a href="./papers/KernelNet.pdf" target="_blank">pdf file</a>]</div>
                         </div>
                     </li>
 
