--- a/index.html
+++ b/index.html
@@ -107,34 +107,7 @@
                 </div>
 
             <hr>
-<!--            <div class="section-heading"><h2>Notes</h2></div>-->
-<!--                <p> Jan.2020: <i> I will start writing down some notes on different topics (but all machine learning related) here.</i></p>-->
-<!--                <ul>-->
-<!--                    <li>-->
-<!--                        <div class="note_class">Information Geometry-->
-<!--                            <ul>-->
-<!--                                <li>-->
-<!--                                    <div id="notes"> <b>[updated Jan.11.2020]</b> Elementary Differential Geometry [<a href="./notes/information_geometry/elementary.pdf" target="_blank">pdf link</a>]</div>-->
-<!--                                </li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </li>-->
-<!--                    <br>-->
-
-<!--                    <li>-->
-<!--                        <div class="note_class">Non-equilibrium Statistical Physics-->
-<!--&lt;!&ndash;                            <ul>&ndash;&gt;-->
-<!--&lt;!&ndash;                                <li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                </li>&ndash;&gt;-->
-<!--&lt;!&ndash;                            </ul>&ndash;&gt;-->
-<!--                        </div>-->
-<!--                    </li>-->
-<!--                    <br>-->
-
-
-
-<!--                </ul>-->
-
+        <a href="https://info.flagcounter.com/ehg1"><img src="https://s04.flagcounter.com/count/ehg1/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_8/viewers_3/labels_1/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
         </div>
     </body>
 </html>
