--- a/index.html
+++ b/index.html
@@ -98,7 +98,14 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                            <div class="links">[<a href="./papers/KernelNet.pdf" target="_blank">pdf file</a>]</div>
+                            <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv</a>]</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Graph Neural Networks with Composite Kernels</div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
+                            <div class="links">[<a href="https://arxiv.org/abs/2005.07869" target="_blank">arxiv</a>]</div>
                         </div>
                     </li>
 
