--- a/index.html
+++ b/index.html
@@ -30,25 +30,22 @@
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
                     <br>
-                    Prior to joining UB, I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
+                    I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
-                    Currently my research focuses on Kernel Methods and their applications. Here is my <a href="./CV.pdf">CV</a>.
+                    Currently my research focuses on the Kernel Methods and their applications in deep learning. Here is my <a href="./CV.pdf">CV</a>.
                 </p>
 
             <hr>
-            <div class="section-heading"><h2>News</h2></div>
-                <ul>
-                    <li>
-                        <div class="news"><strong>[Jan.2020]</strong> One paper got accepted by IEEE International Symposium on Biomedical Imaging (<b>ISBI</b>), 2020.</div>
-                    </li>
-                    <br>
+<!--            <div class="section-heading"><h2>News</h2></div>-->
+<!--                <ul>-->
+<!--                    <li>-->
+<!--                        <div class="news"><strong>[Jan.2020]</strong> One paper got accepted by IEEE International Symposium on Biomedical Imaging (<b>ISBI</b>), 2020.</div>-->
+<!--                    </li>-->
 
-                    <li>
-                        <div class="news"><strong>[Nov.2019]</strong> Two papers got accepted by AAAI conference on Artificial Intelligence (<b>AAAI</b>), 2020.</div>
-                    </li>
-                </ul>
-
-
+<!--                    <li>-->
+<!--                        <div class="news"><strong>[Nov.2019]</strong> Two papers got accepted by AAAI conference on Artificial Intelligence (<b>AAAI</b>), 2020.</div>-->
+<!--                    </li>-->
+<!--                </ul>-->
             <hr>
             <div class="section-heading"><h2>Publications</h2></div>
                 <ul>
@@ -98,7 +95,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                            <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv</a>]</div>
+                            <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv</a> (old version)]</div>
                         </div>
                     </li>
                     <li>
