--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <p> I am a second year Ph.D. student co-advised by
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
-                    <br>
+<!--                    <br>-->
                     I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
-                    <br>
+<!--                    <br>-->
                     Currently my research focuses on the Kernel Methods and their applications in deep learning. Here is my <a href="./CV.pdf">CV</a>.
                 </p>
 
@@ -46,7 +46,7 @@
 <!--                        <div class="news"><strong>[Nov.2019]</strong> Two papers got accepted by AAAI conference on Artificial Intelligence (<b>AAAI</b>), 2020.</div>-->
 <!--                    </li>-->
 <!--                </ul>-->
-            <hr>
+<!--            <hr>-->
             <div class="section-heading"><h2>Publications</h2></div>
                 <ul>
                     <li>
@@ -102,7 +102,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Graph Neural Networks with Composite Kernels</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
-                            <div class="links">[<a href="https://arxiv.org/abs/2005.07869" target="_blank">arxiv</a>]</div>
+                            <div class="links">[<a href="https://arxiv.org/abs/2005.07869" target="_blank">arxiv</a> (old version)]</div>
                         </div>
                     </li>
 
