--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <!--                    <br>-->
                     I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
 <!--                    <br>-->
-                    Currently my research focuses on the Kernel Methods and their applications in deep learning. Here is my <a href="./CV.pdf">CV</a>.
+                    Currently my research focuses on the Kernel Methods and their applications in deep learning.
+<!--                    Here is my <a href="./CV.pdf">CV</a>.-->
                 </p>
 
             <hr>
