--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Variational Adversarial Kernel Learned Imitation Learning </div>
+                            <div class="title"><text id="small-caps"> Variational Adversarial Kernel Learned Imitation Learning <font color="#FF0000">(Spotlight)</font></div>
                             <div class="authors"> Fan Yang, Alina Vereshchaka, <b>Yufan Zhou</b>, Changyou Chen, Wen Dong.</div>
                             <div class="venue"> <i> AAAI conference on Artificial Intelligence </i> (<b>AAAI</b>), 2020.</div>
                         </div>
@@ -71,7 +71,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions </div>
+                            <div class="title"><text id="small-caps"> Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions <font color="#FF0000">(Spotlight)</font> </div>
                             <div class="authors">Zhenyi Wang, Ping Yu, Yang Zhao, Ruiyi Zhang, <b>Yufan Zhou</b>, Junsong Yuan, Changyou Chen.</div>
                             <div class="venue"> <i> AAAI conference on Artificial Intelligence </i>  (<b>AAAI</b>), 2020.</div>
                         </div>
