--- a/index.html
+++ b/index.html
@@ -22,17 +22,22 @@
                     University at Buffalo<br>
                     Davis Hall, Amherst, NY, 14228<br>
                 </div>
+                <br>
+                <b>Email: </b> yufanzho AT buffalo DOT edu
+
             </div>
 
             <hr>
             <div class="section-heading"><h2>Bio</h2></div>
-                <p> I am a second year Ph.D. student co-advised by
+                <p> I am a third year Ph.D. student co-advised by
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
 <!--                    <br>-->
                     I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
-<!--                    <br>-->
-                    Currently my research focuses on the Kernel Methods and their applications in deep learning.
+                    <br>
+                    My research focuses on learning relationships between data samples or distributions.<br>
+                    Currently, I'm using deep learning methods to learn 'better' kernels, and utilizing them in deep generative models, meta-learning, etc.<br>
+                    I`m also interested in Wasserstein Gradient Flow and Neural Tangent Kernel.
 <!--                    Here is my <a href="./CV.pdf">CV</a>.-->
                 </p>
 
@@ -40,16 +45,29 @@
 <!--            <div class="section-heading"><h2>News</h2></div>-->
 <!--                <ul>-->
 <!--                    <li>-->
-<!--                        <div class="news"><strong>[Jan.2020]</strong> One paper got accepted by IEEE International Symposium on Biomedical Imaging (<b>ISBI</b>), 2020.</div>-->
+<!--                        <div class="news"> One paper got accepted by <b>NeurIPS</b>, 2020.</div>-->
 <!--                    </li>-->
 
 <!--                    <li>-->
-<!--                        <div class="news"><strong>[Nov.2019]</strong> Two papers got accepted by AAAI conference on Artificial Intelligence (<b>AAAI</b>), 2020.</div>-->
+<!--                        <div class="news"> One paper got accepted by <b>ISBI</b>, 2020.</div>-->
+<!--                    </li>-->
+
+<!--                    <li>-->
+<!--                        <div class="news"> Two papers got accepted by <b>AAAI</b>, 2020.</div>-->
 <!--                    </li>-->
 <!--                </ul>-->
 <!--            <hr>-->
             <div class="section-heading"><h2>Publications</h2></div>
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
+                            <div class="venue"> <i> Thirty-fourth Conference on Neural Information Processing Systems</i> (<b>NeurIPS</b>), 2020.</div>
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Weakly-supervised Brain Tumor Classification with Global Diagnosis Label <font color="#FF0000">(Oral)</font> </div>
@@ -82,7 +100,7 @@
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Holistic Brain Tumor Screening and Classification Based on DenseNet and Recurrent Neural Network </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Hong Zhu, Changyou Chen, Mingchen Gao, Kai Xu, Jinhui Xu.</div>
-                            <div class="venue"> <i> International MICCAI Brainlesion Workshop </i> (<b>BrainLes</b>), 2018.</div>
+                            <div class="venue"> <i> International Conference on Medical Image Computing and Computer Assisted Intervention, Brain Lesion Workshop </i> (<b>BrainLes</b>, <b>MICCAI</b>), 2018.</div>
                         </div>
                     </li>
 
@@ -99,19 +117,36 @@
                             <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv</a> (old version)]</div>
                         </div>
                     </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Graph Neural Networks with Composite Kernels</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
-                            <div class="links">[<a href="https://arxiv.org/abs/2005.07869" target="_blank">arxiv</a> (old version)]</div>
                         </div>
                     </li>
+                </ul>
+            </div>
+
+            <hr>
+            <div class="section-heading"><h2>Professional Services</h2></div>
+                <ul>
+                    Program Committee/Reviewer:
+                    <li>
+                         IJCAI 2019, IJCAI 2021;
+                    </li>
+                    <li>
+                        NeurIPS 2020;
+                    </li>
+                    <li>
+                        AAAI 2021;
+                    </li>
+<!--                    <li>-->
+<!--                        I also reviewed papers or served as Review Assistant for:-->
+<!--                        ICML 2019, UAI 2019, NeurIPS 2019, AAAI 2020, ICLR 2020, ICML 2020, UAI 2020, ECML 2020.-->
+<!--                    </li>-->
 
 
                 </ul>
-                </div>
-
-            <hr>
-        </div>
     </body>
 </html>
