--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div id="contact">
                     Department of Computer Science and Engineering<br>
                     University at Buffalo<br>
-                    Davis Hall, Amherst, NY, 14228<br>
+                    Davis Hall, Buffalo, NY, 14260<br>
                 </div>
                 <br>
                 <b>Email: </b> yufanzho AT buffalo DOT edu
@@ -73,7 +73,6 @@
                             <div class="title"><text id="small-caps"> Weakly-supervised Brain Tumor Classification with Global Diagnosis Label <font color="#FF0000">(Oral)</font> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Zheshuo Li, Chunwei Ma, Mingchen Gao, Changyou Chen, Hong Zhu, Jinhui Xu.</div>
                             <div class="venue"> <i> IEEE International Symposium on Biomedical Imaging </i> (<b>ISBI</b>), 2020.</div>
-<!--                        <div class="links">[<a href="./materials/KWNG.pdf">paper</a>]</div>-->
                         </div>
                     </li>
                     <br>
