--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <hr>
             <div class="section-heading"><h2>Bio</h2></div>
-                <p> I am a Ph.D. student co-advised by
+                <p> I am a Ph.D. student (Fall 2018 - present) co-advised by
                     <a href="https://cse.buffalo.edu/~jinhui/" target="_blank">Prof. Jinhui Xu</a> and
                     <a href="https://cse.buffalo.edu/~changyou/" target="_blank">Prof. Changyou Chen</a>.
 <!--                    <br>-->
