--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                     <li>
                         AAAI 2021;
                     </li>
+                    <li>
+                        AISTATS 2021;
+                    </li>
 <!--                    <li>-->
 <!--                        I also reviewed papers or served as Review Assistant for:-->
 <!--                        ICML 2019, UAI 2019, NeurIPS 2019, AAAI 2020, ICLR 2020, ICML 2020, UAI 2020, ECML 2020.-->
