--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
             </div>
 
             <hr>
-            <div class="section-heading"><h2>Professional Services</h2></div>
+            <div class="section-heading"><h2>Professional Activities</h2></div>
                 <ul>
                     Program Committee/Reviewer:
                     <li>
-                         IJCAI 2019, IJCAI 2021;
+                        IJCAI 2021;
                     </li>
                     <li>
                         NeurIPS 2020;
@@ -145,7 +145,7 @@
                     </li>
 <!--                    <li>-->
 <!--                        I also reviewed papers or served as Review Assistant for:-->
-<!--                        ICML 2019, UAI 2019, NeurIPS 2019, AAAI 2020, ICLR 2020, ICML 2020, UAI 2020, ECML 2020.-->
+<!--                        ICML 2019, IJCAI 2019, UAI 2019, NeurIPS 2019, AAAI 2020, ICLR 2020, ICML 2020, UAI 2020, ECML 2020.-->
 <!--                    </li>-->
 
 
