--- a/index.html
+++ b/index.html
@@ -107,13 +107,20 @@
                 </ul>
 
             <hr>
-            <div class="section-heading"><h2>Manuscripts</h2></div>
+            <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
                 <ul>
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                            <div class="links">[<a href="https://arxiv.org/abs/1912.00979" target="_blank">arxiv</a> (old version)]</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> MixKD: Towards Efficient Distillation of Large-scale Language Models</div>
+                            <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
                         </div>
                     </li>
                     <br>
