--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--                    <br>-->
                     I got my bachelor's degree from <a href="https://www.zju.edu.cn/english/" target="_blank"> Zhejiang University</a>.
                     <br>
-                    My research focuses on machine learning and deep learning.<br>
+                    I'm broadly interested in machine learning and deep learning.<br>
                     Currently, I'm using deep learning methods to learn 'better' kernels, and utilizing them in deep generative models, meta-learning, etc.<br>
                     I`m also interested in Wasserstein Gradient Flow and Neural Tangent Kernel.
 <!--                    Here is my <a href="./CV.pdf">CV</a>.-->
