--- a/index.html
+++ b/index.html
@@ -58,7 +58,27 @@
 <!--                </ul>-->
 <!--            <hr>-->
             <div class="section-heading"><h2>Publications</h2></div>
-                <ul>
+                <ol>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
+                            <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
+                            <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
+                        </div>
+                    </li>
+                    <br>
+
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> Meta-Learning with Neural Tangent Kernels </div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Zhenyi Wang, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
+                            <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
+                        </div>
+                    </li>
+                    <br>
+
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
@@ -104,11 +124,11 @@
                     </li>
 
 
-                </ul>
+                </ol>
 
             <hr>
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
-                <ul>
+                <ol>
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</div>
@@ -119,19 +139,11 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> MixKD: Towards Efficient Distillation of Large-scale Language Models</div>
-                            <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
-                        </div>
-                    </li>
-                    <br>
-
-                    <li>
-                        <div class="paper">
                             <div class="title"><text id="small-caps"> Graph Neural Networks with Composite Kernels</div>
                             <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                         </div>
                     </li>
-                </ul>
+                </ol>
             </div>
 
             <hr>
