--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 <!--            <div class="section-heading"><h2>News</h2></div>-->
 <!--                <ul>-->
 <!--                    <li>-->
+<!--                        <div class="news"> Two papers got accepted by <b>ICLR</b>, 2021.</div>-->
+<!--                    </li>-->
+
+<!--                    <li>-->
 <!--                        <div class="news"> One paper got accepted by <b>NeurIPS</b>, 2020.</div>-->
 <!--                    </li>-->
 
@@ -59,10 +63,11 @@
 <!--            <hr>-->
             <div class="section-heading"><h2>Publications</h2></div>
                 <ol>
+
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
-                            <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
+                            <div class="title"><text id="small-caps"> Meta-Learning with Neural Tangent Kernels </div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Zhenyi Wang, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
                     </li>
@@ -71,8 +76,8 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Meta-Learning with Neural Tangent Kernels </div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Zhenyi Wang, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
+                            <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
+                            <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
                     </li>
