--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> Meta-Learning with Neural Tangent Kernels </div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Zhenyi Wang, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
+                            <div class="authors"> <b>Yufan Zhou*</b>, Zhenyi Wang*, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
                     </li>
