--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> Learning Manifold Implicitly via Explicit Heat Kernel Learning</div>
+                            <div class="title"><text id="small-caps"> MixKD: Towards Efficient Distillation of Large-scale Language Models</div>
                             <div class="authors"> Kevin J Liang, Weituo Hao, Dinghan Shen, <b>Yufan Zhou</b>, Weizhu Chen, Changyou Chen, Lawrence Carin.</div>
                             <div class="venue"> <i> The Ninth International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
                         </div>
