--- a/index.html
+++ b/index.html
@@ -156,16 +156,19 @@
                 <ul>
                     Program Committee/Reviewer:
                     <li>
-                        IJCAI 2021;
+                        NeurIPS 2020;
                     </li>
                     <li>
-                        NeurIPS 2020;
+                        ICML 2021;
+                    </li>
+                    <li>
+                        AISTATS 2021;
                     </li>
                     <li>
                         AAAI 2021;
                     </li>
                     <li>
-                        AISTATS 2021;
+                        IJCAI 2021;
                     </li>
 <!--                    <li>-->
 <!--                        I also reviewed papers or served as Review Assistant for:-->
